# tree-sitter-gregorio

./: .editorconfig  .gitignore  .tree-sitter-config.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GRAMMAR_DEVELOPMENT.md  LICENSE  MILESTONES.md  README.md  RELEASE_NOTES_v0.2.0.md  STATUS.md  an--ab_arbore_autem--verona.gabc  binding.gyp  example.js  fix_clef_tests.py  grammar.js  helix-languages.toml  in--ad_te_levavi--triplex.gabc  package-lock.json  package.json  regenerate_tests.py  test_error_detection.gabc  test_latex_headers.js  test_spacing.gabc  teste.aux  teste.fdb_latexmk  teste.fls  teste.gaux  teste.tex  tree-sitter.json
bindings/node/: binding.cc  binding.gyp  index.js
bindings/rust/: lib.rs
docs/: ERRORS_AND_WARNINGS_SUMMARY.md  GABC_SYNTAX_SPECIFICATION.md  GREGORIO_COMPILER_ERRORS_AND_WARNINGS.md  HEADER_HIGHLIGHTING.md  HELIX_SETUP.md  LATEX_INJECTION.md  NABC_SYNTAX_SPECIFICATION.md  PROJECT_STRUCTURE.md
examples/: alternation.gabc  kyrie.gabc  nabc_glyph_descriptors.gabc  nabc_glyph_modifiers.gabc  nabc_pitch_descriptor.gabc  nabc_test.gabc
queries/: README.md  diagnostics.scm  highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
test/: validation_test.js
test/corpus/: 00-basic-no-notes.txt  00-basics.txt  00-clef-only.txt  01-lyrics-notation.txt  01-no-lyrics.txt  02-basic-lyrics.txt  02-gabc-neumes.txt  03-basic-lyrics-with-comments.txt  03-gabc-alterations.txt  04-basic-nabc.txt  04-gabc-complex-neumes.txt  05-gabc-neume-fusions.txt  05-style-tags.txt  06-gabc-spacing.txt  06-syllable-controls.txt  (+76 more)
