[package]
name = "tree-sitter-gregorio"
description = "gregorio grammar for the tree-sitter parsing library"
version = "0.5.1"
keywords = ["incremental", "parsing", "gregorio"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/aiscgre-br/tree-sitter-gregorio"
authors = ["AISCGre Brasil"]
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.22"

[build-dependencies]
cc = "1.0"
